phase4/good-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  containers:
  - name: nginx
    image: nginxinc/nginx-unprivileged:latest
    securityContext:
      runAsNonRoot: true
