phase4/secret-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-demo
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    volumeMounts:
    - name: secret-volume
      mountPath: "/etc/myapp"
      readOnly: true
  volumes:
  - name: secret-volume
    secret:
      secretName: mysecret
